[gd_scene load_steps=4 format=3 uid="uid://bq12ugc7lnirg"]

[ext_resource type="Script" uid="uid://06pt5wan8jg1" path="res://Stages/World/PhysicalInventory.gd" id="1_ggkuf"]
[ext_resource type="Texture2D" uid="uid://2xf1pqc78iin" path="res://Assets/Icon/icon.svg" id="2_mwkkp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_01yad"]
radius = 15.0

[node name="PhysicalInventory" type="Area2D"]
collision_layer = 0
monitorable = false
script = ExtResource("1_ggkuf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_01yad")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.134605, 0.748169, 0, 1)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_mwkkp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
